force-app/main/default/objects/User_Branch_Allocation__c/User_Branch_Allocation__c.object-meta.xml
<CustomObject>
    <label>User Branch Allocation</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Allocation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Branch Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>