force-app/main/default/objects/User_Branch_Allocation__c/fields/Branch_Master__c.field-meta.xml
<CustomField>
    <fullName>Branch_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>User Branch Allocations</relationshipLabel>
    <relationshipName>User_Branch_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>